[FORGE_DEV] YC-PROTAS-S1-003: src/test/java/com/protaskkillaaa/web/rest/DashboardResourceIT.java